--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,5 +1,5 @@
-<div class="item-image">
-  <i class="fa fa-picture-o fa-6"></i>
+<div>
+  <img src="https://mruanova.com/assets/img/giphy.gif" width="100" height="133">
 </div>
-<div class="item-name">{{username}}</div>
-<div class="item-price">{{price}}</div>
+<div class="item-name">Name : {{name}}</div>
+<div class="item-price">Price : {{price}}</div>
